--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
+body{
+    scroll-behavior: smooth;
+}
+
 .navbar-logo{
     width: 80px;
     height: 70px;
@@ -117,7 +121,7 @@
    align-items: center;
    height: calc(80vh - 4rem);
    width: 100vw;
-   max-width: 90rem;
+   max-width: 96rem;
 }
 @media screen and (max-width:767px){
     #aboutSection{
@@ -160,4 +164,157 @@
 }
 .about-img{
     width: 350px;
+}
+
+/* create product section */
+#products{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #f0eaea;
+    height: calc(100vh -4rem);
+    padding: 4rem;
+    width: 100vw;
+}
+.product-heading{
+    font-family: "Roboto";
+    font-size: 2rem;
+    font-weight: 700;
+    color: #20205c;
+}
+.product-description{
+    font-family: "Roboto";
+    font-size: 1rem;
+    text-align: center;
+    max-width: 40rem;
+    padding: 0 2rem;
+}
+.images-container{
+    display: flex;
+    margin: 2rem;
+}
+@media screen and (max-width:767px){
+    .images-container{
+        flex-direction: column;
+    }
+}
+.image-container{
+    display: flex;
+    flex-direction: column;
+    background: white;
+    margin-right: 1.5rem;
+    padding-top: 0rem;
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+}
+.image{
+    width: 215px;
+    height: 200px;
+}
+.label-text{
+    padding-left: 0.5rem;
+}
+.button{
+    border: none;
+    background: #20205c;
+    color: #fff;
+    border-radius: 0.5rem;
+    padding: 0.5rem 2.5rem;
+}
+
+/* create clients css */
+#clients{
+    background-color: #e5e1e1;
+    padding: 4rem;
+    height: calc(60vh - 4rem);
+}
+.clients-heading{
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #20205c;
+}
+
+/* create footer css */
+.footer{
+    background:#000000;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem 8rem;
+}
+.top-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 1.5rem;
+}
+.company-description{
+    max-width: 40rem;
+    color: #7f7b7b;
+    margin-top: 1.8rem;
+}
+.webpack-heading{
+    color: #e4dbdb;
+    font-size: 32px;
+}
+.description{
+    font-weight: 400;
+    font-size: 1rem;
+    max-width: 40rem;
+}
+.icon{
+    width: 1.8rem;
+    height: 3.5rem;
+    margin-right: 0.5rem;
+}
+
+.company-links{
+    width: 40rem;
+}
+.company-heading{
+    color: #fff;
+}
+.links-section{
+    display: flex;
+}
+.next-icon{
+    color: #ffffff;
+}
+.link{
+    font-family: "Roboto";
+    font-weight: 500;
+    color: #7f7b7b;
+}
+.company-contact-details{
+    width: 450px;
+}
+.contact-information{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: #7f7b7b;
+}
+.contact-details{
+    margin-left: 0.4rem;
+}
+
+.copy-rights-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 1.5rem;
+}
+.copy-heading{
+    color: #7f7b7b;
+}
+.name{
+    color: #007bff;
+}
+.line{
+    max-width: 100vw;
+    border: 1px solid grey;
+    margin-bottom: 1rem;
+    margin-left: 1.5rem;
 }
